about me section completed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <!-- favicon -->
-<link rel="shortcut icon" href="https://img.icons8.com/external-flaticons-flat-flat-icons/1200/external-portfolio-web-development-flaticons-flat-flat-icons.jpg" type="image/x-icon">
+<link rel="shortcut icon" href="./assets/3d-nft-icon-digital-artist-male.png" type="image/x-icon">
 
 
     <title>Sonu Justin</title>
@@ -54,6 +54,20 @@
                 <img  class="img-fluid" src="./assets/3d-nft-icon-digital-artist-male.png" alt="">
             </div>
         </div>
+    </section>
+    <section class="container  mt-5">
+        <div class="col-12">
+            <h1 class="text-center text-light">
+                About me
+            </h1>
+            <p class="text-center text-light fs-4 ps-5 pe-5 pt-3">
+               I enjoy transforming ideas into visually appealing and functional websites while continuously improving my skills in modern web design and layout techniques. I am committed to writing structured, maintainable code and constantly learning new technologies to grow as a developer.
+            </p>
+        </div>
+    </section>
+
+    <section id="skills" class="">
+
     </section>
 </body>
 </html>
