skills section completed

--- a/index.html
+++ b/index.html
@@ -1,73 +1,111 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- css -->
- <link rel="stylesheet" href="./style.css">
- <!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- css -->
+    <link rel="stylesheet" href="./style.css" />
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
 
-<!-- Font-awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-<!-- Google fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wdth,wght@125,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wdth,wght@125,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap"
+      rel="stylesheet"
+    />
 
-
-<!-- favicon -->
-<link rel="shortcut icon" href="./assets/3d-nft-icon-digital-artist-male.png" type="image/x-icon">
-
+    <!-- favicon -->
+    <link
+      rel="shortcut icon"
+      href="./assets/3d-nft-icon-digital-artist-male.png"
+      type="image/x-icon"
+    />
 
     <title>Sonu Justin</title>
-</head>
-<body>
-    <header class="container-fluid ">
-        <nav class="container  d-flex justify-content-between align-items-center pt-3 pb-2">
-            <h1>
-                Sonu Justin
-            </h1>
-            <div>
-                <ul class="d-flex gap-5 ">
-                    <li> <a  href="">Home</a></li>
-                    <li> <a  href="">About</a></li>
-                    <li> <a  href="">Skills</a></li>
-                    <li> <a  href="">Projects</a></li>
-                </ul>
-            </div>
-        </nav>
-
+  </head>
+  <body>
+    <header class="container-fluid">
+      <nav
+        class="container d-flex justify-content-between align-items-center pt-3 pb-2"
+      >
+        <h1>Sonu Justin</h1>
+        <div>
+          <ul class="d-flex gap-5">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Projects</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <section class="container mt-5 pt-5 ps-5">
-        <div class="row " >
-            <div id="hero-left" class="col-6 d-static">
-                <h1 class="text-center">Sonu Justin</h1>
-                <h4 class="text-light text-center">FullStack Developer</h4>
-            </div>
-            <div class="col-6">
-                <img  class="img-fluid" src="./assets/3d-nft-icon-digital-artist-male.png" alt="">
-            </div>
+      <div class="row">
+        <div id="hero-left" class="col-6 d-static">
+          <h1 class="text-center">Sonu Justin</h1>
+          <h4 class="text-light text-center">FullStack Developer</h4>
         </div>
+        <div class="col-6">
+          <img
+            class="img-fluid"
+            src="./assets/3d-nft-icon-digital-artist-male.png"
+            alt=""
+          />
+        </div>
+      </div>
     </section>
-    <section class="container  mt-5">
-        <div class="col-12">
-            <h1 class="text-center text-light">
-                About me
-            </h1>
-            <p class="text-center text-light fs-4 ps-5 pe-5 pt-3">
-               I enjoy transforming ideas into visually appealing and functional websites while continuously improving my skills in modern web design and layout techniques. I am committed to writing structured, maintainable code and constantly learning new technologies to grow as a developer.
-            </p>
-        </div>
+    <section class="container mt-5">
+      <div class="col-12">
+        <h1 class="text-center text-light">About me</h1>
+        <p class="text-center text-light fs-4 ps-5 pe-5 pt-3">
+          I enjoy transforming ideas into visually appealing and functional
+          websites while continuously improving my skills in modern web design
+          and layout techniques. I am committed to writing structured,
+          maintainable code and constantly learning new technologies to grow as
+          a developer.
+        </p>
+      </div>
     </section>
 
-    <section id="skills" class="">
-
+    <section id="skills" class="container mt-5">
+      <div class="row ps-5 pe-5 pt-5">
+        <h1 class="text-center text-light">Skills</h1>
+        <div class="col-4 mt-5">
+           <i class="fa-brands fa-html5 "></i>
+           <p class="p-3">HTML can embed programs written in a scripting language such as JavaScript, which affects the behavior and content of web pages. The inclusion of CSS defines the look and layout of content. The World Wide Web Consortium (W3C), former maintainer of the HTML and current maintainer of the CSS standards, has encouraged the use of CSS over explicit presentational HTML since 1997.[3] A form of HTML, known as HTML5, is used to display video and audio, primarily using the <canvas> element, together with JavaScript.</p> 
+        </div>
+          <div class="col-4 mt-5">
+            <i class="fa-brands fa-css3" ></i>
+            <p class="p-3">CSS is designed to enable the separation of content and presentation, including layout, colors, and fonts.[4] This separation can improve content accessibility, since the content can be written without concern for its presentation; provide more flexibility and control in the specification of presentation characteristics; enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and repetition in the structural content; and enable the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
+        </div>
+          <div class="col-4 mt-5  ">
+            <i class="fa-brands fa-bootstrap" "></i>
+            <p class="p-3">Bootstrap 5 is a free, open-source front-end framework that uses HTML, CSS, and vanilla JavaScript to help developers build responsive, mobile-first websites quickly and efficiently. It provides a collection of pre-designed templates, components, and utility classes that handle layout and styling, ensuring consistency and browser compatibility across modern devices.</p>
+        </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
