hero section buttons added

--- a/index.html
+++ b/index.html
@@ -67,12 +67,15 @@
       </nav>
     </header>
 
-    <!--  -->
+    <!-- hero-section -->
     <section id="home" class="container mt-5 pt-5 ps-5">
       <div class="row">
         <div id="hero-left" class="col-6 d-static">
           <h1 class="text-center">Sonu Justin</h1>
           <h4 class="text-light text-center">FullStack Developer</h4>
+          <a href=""><i class="fa-brands fa-linkedin p-2"></i></a>
+          <a href=""><i class="fa-brands fa-github ms-2 p-2" ></i></a>
+          <a href=""><i class="fa-solid fa-envelope ms-2 p-2" ></i></a>
         </div>
         <div class="col-6">
           <img
