hero-iamges-animation-rotation-completed

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
 
     <!-- hero-section -->
-    <section id="home" class="container mt-5 pt-5 ps-5">
+    <section id="home" class="container mt-5 pb-5 pt-5 ps-5">
       <div class="row">
         <div id="hero-left" class="col-6 d-static">
           <h1 class="text-center">Sonu Justin</h1>
@@ -80,9 +80,12 @@
         <div class="col-6">
           <img
             class="img-fluid"
-            src="./assets/3d-nft-icon-digital-artist-male.png"
+            src="./assets/hero-img.png"
             alt=""
           />
+          <img class="animated-image" src="./assets/paint-.PNG" alt="">
+          <img class="animated-image2" src="./assets/gallery-img-2.PNG" alt="">
+          <img class="animated-image3" src="./assets/star -icon.PNG" alt="">
         </div>
       </div>
     </section>
