--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
          <div id="underline"></div>
       <div class="row ps-5 pe-5 pt-2">
          
-        <div class="col-4 mt-5">
+        <div class="col-4 mt-5"  >
            <i class="fa-brands fa-html5 "></i>
            <p class="p-3" >HTML can embed programs written in a scripting language such as JavaScript, which affects the behavior and content of web pages. The inclusion of CSS defines the look and layout of content. The World Wide Web Consortium (W3C), former maintainer of the HTML and current maintainer of the CSS standards, has encouraged the use of CSS over explicit presentational HTML since 1997.[3] A form of HTML, known as HTML5, is used to display video and audio, primarily using the <canvas> element, together with JavaScript.</p> 
         </div>
@@ -147,5 +147,7 @@
 
     
   </body>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ <script>
+  AOS.init();
+</script>
 </html>
